--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,8 @@
     "vudu": "^1.8.5",
     "webpack": "^1.12.14"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "file-loader": "^0.9.0",
+    "url-loader": "^0.5.7"
+  }
 }
