--- a/client/package.json
+++ b/client/package.json
@@ -31,10 +31,11 @@
     "react-dom": "^0.14.8 || ^15.0.0",
     "react-on-rails": "6.1.2",
     "vudu": "^1.8.5",
-    "webpack": "^1.12.14"
-  },
-  "devDependencies": {
+    "webpack": "^1.12.14",
+    "whatwg-fetch": "^2.0.0",
     "file-loader": "^0.9.0",
     "url-loader": "^0.5.7"
+  },
+  "devDependencies": {
   }
 }
