--- a/package.json
+++ b/package.json
@@ -9,5 +9,6 @@
     "postinstall": "cd client && npm install",
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec"
-  }
+  },
+  "devDependencies": {}
 }
