--- a/package.json
+++ b/package.json
@@ -10,5 +10,7 @@
     "rails-server": "echo 'visit http://localhost:3000/hello_world' && foreman start -f Procfile.dev",
     "test": "rspec"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "repreload": "0.0.7"
+  }
 }
