--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "whatwg-fetch": "^2.0.0",
     "file-loader": "^0.9.0",
     "react-scroll": "^1.4.4",
-    "url-loader": "^0.5.7"
+    "url-loader": "^0.5.7",
+    "repreload": "0.0.7"
   }
 }
